   Also, all user-visible URLs are now clean and short (no more cgi-bin/... 
   clutter). (#980, #982)
 * Remediation pages are translatable (#822)

--------------------------------------------------------------------------------
Version <2.2-release> released on <releaseDate>

New Hardware Support
 * AeroHIVE AP Access Points
 * Dlink DGS 3200 switch
 * HP ProCurve 5400 Series

Enhancements
 * Nortel module now warns in the logs about a common stacking Nortel problem
 * Cleanup of the MySQL optimization section of the Admin Guide
 * New DHCP fingerprint for Cisco/Linksys, Aruba, 3Com switch, HTC Android and
   Konica Minolta MFP's
 * Warning avoidance
 * New FreeRADIUS watchdog script in addons

Bug fixes
 * Re-introduced MAC Authentication and 802.1X support in Cisco 3560, 3750
 * Fixed expire deadline automatic un-registration (#865)
 * Updated Admin Guide to reflect proper method calls for custom VLAN assignment
 * Fixed Nortel switches problems on some models / firmwares
 * Fixed installer errors (#1217)

Translations
 * Updated French (fr) translation (Thanks to Vincent Blut)

--------------------------------------------------------------------------------
Version 2.2.0 released on 2011-05-03

New Hardware Support
- Motorola RF Switches (Wireless Controllers)
- 3Com Switches 4200G, E4800G and E5500G now supports MAC Authentication and 
  802.1X
- Dlink DGS 3100 Switches

New features
- Captive Portal network access detection is more accurate and way faster
  (javascript-based)
- Easier integration and configuration of FreeRADIUS 2.x using our new
  packetfence-freeradius2 RPM
- Apache configuration is automatically adjusted on startup based on system 
  resources to avoid performance degradation on heavy workloads (#1204)
- New reports: Nodes per SSID (#1126) and Connection-Type (#1125)
- User-Agent violation support completely re-written. It is now easier than 
  ever to block devices or old browsers from your network. (#769, #1192)