@@ -1,0 +1,11 @@
+<?xml version="1.0" encoding="UTF-8"?> 
+<WISPAccessGatewayParam 
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:noNamespaceSchemaLocation="http://www.acmewisp.com/WISPAccessGatewayParam.xsd">
+
+  <Redirect> 
+    <LoginURL>[% login_url %]</LoginURL>
+    <MessageType>100</MessageType> 
+    <ResponseCode>0</ResponseCode> 
+  </Redirect> 
+</WISPAccessGatewayParam>
