@@ -88,6 +88,7 @@ my @files = (
     '/usr/local/pf/lib/pf/web/custom.pm',
     '/usr/local/pf/lib/pf/web/guest.pm',
     '/usr/local/pf/lib/pf/web/util.pm',
+    '/usr/local/pf/lib/pf/web/wispr.pm',
     '/usr/local/pf/sbin/pfdetect',
     '/usr/local/pf/sbin/pfdhcplistener',
     '/usr/local/pf/sbin/pfmon',
@@ -163,6 +164,7 @@ my @files = (
     '/usr/local/pf/html/captive-portal/release.cgi',
     '/usr/local/pf/html/captive-portal/register.cgi',
     '/usr/local/pf/html/captive-portal/remediation.php',
+    '/usr/local/pf/html/captive-portal/wispr.cgi',
     '/usr/local/pf/html/captive-portal/violations/banned_os.php',
     '/usr/local/pf/html/captive-portal/violations/banned_devices.php',
     '/usr/local/pf/html/captive-portal/violations/darknet.php',
