@@ -45,6 +45,7 @@ my @files = (
     '/usr/local/pf/html/captive-portal/redir.cgi',
     '/usr/local/pf/html/captive-portal/release.cgi',
     '/usr/local/pf/html/captive-portal/register.cgi',
+    '/usr/local/pf/html/captive-portal/wispr.cgi',
     '/usr/local/pf/lib/pf/action.pm',
     '/usr/local/pf/lib/pf/class.pm',
     '/usr/local/pf/lib/pf/configfile.pm',
@@ -95,6 +96,7 @@ my @files = (
     '/usr/local/pf/lib/pf/web/custom.pm',
     '/usr/local/pf/lib/pf/web/guest.pm',
     '/usr/local/pf/lib/pf/web/util.pm',
+    '/usr/local/pf/lib/pf/web/wispr.pm',
     '/usr/local/pf/lib/pf/WebAPI.pm',
     '/usr/local/pf/sbin/pfdetect',
     '/usr/local/pf/sbin/pfdhcplistener',
