@@ -28,6 +28,7 @@ pod_coverage_ok("pf::services::apache");
 pod_coverage_ok("pf::web");
 pod_coverage_ok("pf::web::guest");
 pod_coverage_ok("pf::web::util");
+pod_coverage_ok("pf::web::wispr");
 # Warning: this doesn't test for PFAPI subs since it's under another package name
 # I couldn't find a way to tell T::P::C to cover it
 pod_coverage_ok("pf::WebAPI");
