@@ -13,13 +13,14 @@ use warnings;
 use diagnostics;
 
 use lib '/usr/local/pf/lib';
-use Test::More tests => 18;
+use Test::More tests => 19;
 use Test::NoWarnings;
 
 BEGIN { use_ok('pf::web') }
 BEGIN { use_ok('pf::web::custom') }
 BEGIN { use_ok('pf::web::guest') }
 BEGIN { use_ok('pf::web::util') }
+BEGIN { use_ok('pf::web::wispr') }
 
 # pf::web::util
 
